# Feedback

./: CMakeLists.txt  CodingGuidelines.cmake  CodingGuidelines.json  LICENSE  README.adoc  _clang-format  dummy.cpp  feedback.cmake  feedback_private.cmake  project_guidelines.json
.devcontainer/: Dockerfile  devcontainer.json
checker/: CMakeLists.txt  CodingGuidelinesChecker.cpp
checker/include/: async.h  benchmark.h  format.h  parameter.h  regex.h  stream.h  syncstream
checker/include/cxx20/: syncstream
checker/include/feedback/: async.h  io.h  parameter.h  text.h
checker/src/: benchmark.regex.cpp  main.cpp  parameter.cpp  regex.cpp  test.container.cpp  test.regex.cpp
doc/architecture/decisions/: 0002-target-cmake-3-16-3.md  0003-implement-response-as-variant.md  0004-do-file-io-without-memory-mapping.md
doc/guidelines/: disabled_workflow.json  just_my_code_workflow.json  maintainer_workflow.json
example/: CMakeLists.txt  diff.txt  errors.json  example_rules.json  main.cpp  main1.cpp  main2.cpp  warnings.json
examples/: CMakeLists.txt
examples/excluded_targets/: CMakeLists.txt
examples/multiple_feedbacks/: CMakeLists.txt  main.cpp
generator/: CMakeLists.txt
generator/core/include/cxx20/: syncstream
generator/core/include/generator/: async.h  container.h  feedback.h  format.h  future.h  io.h  json.h  output.h  regex.h  scm.h  text.h
generator/core/src/generator/: feedback.cpp  io.cpp  json.cpp  output.cpp  regex.cpp  scm.cpp  text.cpp
generator/include/cxx20/: syncstream
generator/include/feedback/: algorithm.h  async.h  container.h  control.h  format.h  io.h  json.h  macros.h  output.h  parameter.h  regex.h  scm.h  stream.h  text.h
generator/include/generator/: cli.h
generator/module/: GeneratorPrivate.cmake
generator/src/: benchmark.regex.cpp  main.cpp  parameter.cpp  regex.cpp  scm.cpp  test.container.cpp  test.regex.cpp  test.syncstream.cpp  text.cpp
generator/src/core/: json.cpp  output.cpp  regex.cpp  scm.cpp
generator/src/generator/: cli.cpp  main.cpp
module/: Feedback.cmake  FeedbackPrivate.cmake  Feedbacks.cmake  diff-untracked-files.cmake  dummy.cpp  feedback.cmake  feedback_private.cmake
tests/: CMakeLists.txt  errors.json
